<resources>

    <!-- Global strings -->

    <string name="app_name">Game Score 2</string>

    <string name="page_title_main">MAIN SCREEN</string>
    <string name="page_title_default">DEFAULT SCREEN</string>

    <string name="btn_submit">Submit</string>
    <string name="et_hint">Score</string>
	
	<string name="default_name_player">Player</string>

	<!-- Menu strings -->
	
    <string name="action_add">Add new player</string>
    <string name="add_title">Add new player</string>
    <string name="add_et">Enter player name</string>
    <string name="add_btn_ok">OK</string>
    <string name="add_btn_cancel">Cancel</string>

    <string name="action_delete">Delete player</string>
	
	<string name="action_undo">Undo</string>
	
	<string name="action_redo">Redo</string>

    <string name="action_clear">Clear score</string>

    <string name="action_use_default">Use default</string>
	
    <string name="action_back">Back</string>

    <string name="action_about">About</string>
    <string name="about_title">About program</string>
    <string name="about_btn_text">OK</string>
    <string name="about_text"><div aligin="center">This application is used for scoring in games.\nEnjoy your game!\n<B>Created by\nshev4enkostr</B></div></string>

    <string name="action_settings">Settings</string>

    <string name="action_exit">Exit</string>
    <string name="exit_title">Exit</string>
    <string name="exit_message">Are you sure?</string>
	
	<!-- Action mode strings -->
	
	<string name="action_mode_title">Select players:</string>
	<string name="action_mode_subtitle_one_player">One player selected</string>
	<string name="action_mode_subtitle_more_players">players selected</string>
	
	<!-- Preference strings -->
		
	<string name="pref_category_general_title">General</string>
		
		<string name="pref_dialog_seek_key">preference_dialog_seek</string>
        <string name="pref_dialog_seek_title">Max number of players</string>
		<string name="pref_dialog_seek_summary">Max number of players in application:</string>

        <string name="pref_ed_tx_pr_bar_min_key">preference_progress_bar_min</string>
        <string name="pref_ed_tx_pr_bar_min_title">Min value on progress bar</string>
        <string name="pref_ed_tx_pr_bar_min_summary">Minimum value on progress bar to display the progress of the game</string>

        <string name="pref_ed_tx_pr_bar_max_key">preference_progress_bar_max</string>
        <string name="pref_ed_tx_pr_bar_max_title">Max value on progress bar</string>
        <string name="pref_ed_tx_pr_bar_max_summary">Maximum value on progress bar to display the progress of the game</string>

    <string name="pref_category_game_bridge_title">Game in Bridge</string>

        <string name="pref_ch_box_bridge_key">preference_check_box_bridge</string>
        <string name="pref_ch_box_bridge_title">Preference for game in Bridge</string>
        <string name="pref_ch_box_bridge_summary_start">Drop score when you reach </string>
		<string name="pref_ch_box_bridge_summary_end"> points?</string>

	<string name="pref_category_about_title">Other</string>
	
		<string name="pref_dialog_about_title">About program</string>
	    <string name="pref_dialog_about_message"><div aligin="center">This application is used for scoring in games.\nEnjoy your game!\n\n<B>Created by ss.stanislavsky</B></div></string>
		<string name="pref_dialog_about_summary">About this program</string>

	<!-- Toasts strings -->
	
    <string name="toast_max_number_of_players">Max number of players!</string>
    <string name="toast_enter_name">Please, enter Player name!</string>
    <string name="toast_no_name">You are not enter any name…</string>
    <string name="toast_no_score_entered">You are not enter any points</string>
	<string name="toast_exit">Press back again to exit from GameScore2</string>

</resources>
