<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

	<item 
		android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="1"
        android:showAsAction="always"
		android:icon="@android:drawable/ic_menu_add"/>
		<!--android:orderInCategory="100"-->
			
	<item 
		android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="2"
        android:showAsAction="always"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
	
	<item 
		android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
		android:icon="@drawable/ic_menu_undo"/>
	
	<item 
		android:id="@+id/action_redo"
        android:title="@string/action_redo"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
		android:icon="@drawable/ic_menu_redo"/>
	
</menu>
